--- a/index.html
+++ b/index.html
@@ -11,12 +11,57 @@
     <title>teamwork_hangVan</title>
 </head>
 <body>
-    <nav></nav>
+    <!-- NAV -->
+    <nav>
+        <h1><i class="fa-solid fa-ticket"></i>HangVan</h1>
+        <article>
+            <ul>
+                <li><a href="./index.html">HOME</a></li>
+                <li><a href="./event.html">EVENT</a></li>
+                <li><a href="./place.html">PLACE</a></li>
+            </ul>
+            <form>
+                <input type="search" placeholder="Search">
+                <input type="submit" value="Search">
+            </form>
+        </article>
+        <details>
+            <summary class="fa-solid fa-bars"></summary>
+            <ul>
+                <li>
+                    <a href="./index.html">HOME</a>
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#event">Event</a></li>
+                        <li><a href="#place">Place</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </li>
+                <li><a href="./event.html">EVENT</a></li>
+                <li><a href="./place.html">PLACE</a></li>
+            </ul>
+        </details>
+    </nav>
+    <!-- NAV END -->
     <header></header>
 
     <main>
 
+        <section class="about" id="about">
 
+        </section>
+
+        <section class="event" id="event">
+
+        </section>
+
+        <section class="place" id="place">
+
+        </section>
+
+        <section class="contact" id="contact">
+
+        </section>
 
     </main>
 
