HTML: working on event section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,33 @@
         </section>
 
         <section class="event" id="event">
+            <article>
+                <h3>Recent Event</h3>
+                <a href="./event.html">see more <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+            <section>
+                <article>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption>
+                            <p>Hot</p>
+                        </figcaption>
+                    </figure>
+                    <aside>
+                        <h4>Vancouver New Year's Eve 2023 - Gatsby's House Party</h4>
+                        <p>Sat, Dec 31, 9:00 PM</p>
+                        <small>Marriott Vancouver Pinnacle Downtown • Vancouver ...</small>
+                        <small>Starts at CA$91.68</small>
+                        <form>
+                            <label for="people">34 / 53 People</label>
+                            <progress id="people"> 70% </progress>
+                        </form>
+                    </aside>
+
+                </article>
+               
+            </section>
+
 
         </section>
 
