HTML: event section is done

--- a/index.html
+++ b/index.html
@@ -51,36 +51,89 @@
 
         </section>
 
+        <!-- EVENT -->
         <section class="event" id="event">
             <article>
                 <h3>Recent Event</h3>
                 <a href="./event.html">see more <i class="fa-solid fa-chevron-right"></i></a>
             </article>
             <section>
-                <article>
+                <a href="#">
                     <figure>
-                        <img src="" alt="">
+                        <img src="./img/eventThum1.jpg" alt="event1">
                         <figcaption>
-                            <p>Hot</p>
+                            <p>D-21</p>
+                        </figcaption>
+                    </figure>
+                    <aside>
+                        <h4>Once Upon A Manger - Singing Christmas Tree 2022</h4>
+                        <p>Fri, Dec 2,7:30 pm</p>
+                        <address><i class="fa-solid fa-location-dot"></i>Broadway Church, 2700 East Broadway, Vancouver</address>
+                        <small>Free</small>
+                        <form>
+                            <label for="people">34 seats left</label>
+                            <progress id="people" value="70" max="100">70%</progress>
+                        </form>
+                    </aside>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./img/eventThum2.jpg" alt="event2">
+                        <figcaption>
+                            <p>D-6</p>
+                        </figcaption>
+                    </figure>
+                    <aside>
+                        <h4>Vancouver New Year's Eve 2023 - Gatsby's House Party</h4>
+                        <p>Sat, Nov 26, 5:30 pm</p>
+                        <address><i class="fa-solid fa-location-dot"></i>Jack Poole Plaza, 1055 Canada Place, Vancouver</address>
+                        <small>CA$12</small>
+                        <form>
+                            <label for="people">217 tickets left</label>
+                            <progress id="people" value="45" max="100">45%</progress>
+                        </form>
+                    </aside>
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./img/eventThum3.jpg" alt="eventThum3">
+                        <figcaption>
+                            <p>D-40</p>
                         </figcaption>
                     </figure>
                     <aside>
                         <h4>Vancouver New Year's Eve 2023 - Gatsby's House Party</h4>
                         <p>Sat, Dec 31, 9:00 PM</p>
-                        <small>Marriott Vancouver Pinnacle Downtown • Vancouver ...</small>
+                        <address><i class="fa-solid fa-location-dot"></i>Marriott Vancouver Pinnacle Downtown, 1128 Hastings Street, Vancouver</address>
                         <small>Starts at CA$91.68</small>
                         <form>
-                            <label for="people">34 / 53 People</label>
-                            <progress id="people"> 70% </progress>
+                            <label for="people">152 seats left</label>
+                            <progress id="people" value="25" max="100">25%</progress>
                         </form>
                     </aside>
-
-                </article>
-               
+                </a>
+                <a href="#">
+                    <figure>
+                        <img src="./img/eventThum4.jpg" alt="eventThum4">
+                        <figcaption>
+                            <p>D-7</p>
+                        </figcaption>
+                    </figure>
+                    <aside>
+                        <h4>United for Ukraine Gala Dinner</h4>
+                        <p>Sun, Nov 27, 5:30 pm</p>
+                        <address><i class="fa-solid fa-location-dot"></i>The Vancouver Club, 915 West Hastings Street, Vancouver</address>
+                        <small>CAD 200</small>
+                        <form>
+                            <label for="people">21 seats left</label>
+                            <progress id="people" value="55" max="100">55%</progress>
+                        </form>
+                    </aside>
+                </a>
             </section>
-
-
         </section>
+        <!-- EVENT END -->
+
 
         <section class="place" id="place">
 
