Mobile: Working on Event section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <h4>Vancouver New Year's Eve 2023 - Gatsby's House Party</h4>
                         <p>Sat, Nov 26, 5:30 pm</p>
                         <address><i class="fa-solid fa-location-dot"></i> Jack Poole Plaza, 1055 Canada Place, Vancouver</address>
-                        <small>CA$12</small>
+                        <small>CAD $12</small>
                         <form>
                             <label for="people">217 tickets left</label>
                             <progress id="people" value="45" max="100">45%</progress>
@@ -105,7 +105,7 @@
                         <h4>Vancouver New Year's Eve 2023 - Gatsby's House Party</h4>
                         <p>Sat, Dec 31, 9:00 PM</p>
                         <address><i class="fa-solid fa-location-dot"></i> Marriott Vancouver Pinnacle Downtown, 1128 Hastings Street, Vancouver</address>
-                        <small>Starts at CA$91.68</small>
+                        <small>Starts at CAD $91.68</small>
                         <form>
                             <label for="people">152 seats left</label>
                             <progress id="people" value="25" max="100">25%</progress>
@@ -123,7 +123,7 @@
                         <h4>United for Ukraine Gala Dinner</h4>
                         <p>Sun, Nov 27, 5:30 pm</p>
                         <address><i class="fa-solid fa-location-dot"></i> The Vancouver Club, 915 West Hastings Street, Vancouver</address>
-                        <small>CAD 200</small>
+                        <small>CAD $200</small>
                         <form>
                             <label for="people">21 seats left</label>
                             <progress id="people" value="55" max="100">55%</progress>
