Main: Place HTMl done

--- a/index.html
+++ b/index.html
@@ -136,7 +136,36 @@
 
 
         <section class="place" id="place">
-
+            <article>
+                <h3>Place to go</h3>
+                <a href="./event.html">see more<i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+            <section>
+                <article>
+                    <aside>
+                        <strong>Restaurant</strong> 
+                        <a href="#">Go &#187;</a>
+                    </aside>
+                </article>
+                <article>
+                    <aside>
+                        <strong>Activities</strong> 
+                        <a href="#">Go &#187;</a>
+                    </aside>
+                </article>
+                <article>
+                    <aside>
+                        <strong>Exhibition</strong> 
+                        <a href="#">Go &#187;</a>
+                    </aside>
+                </article>
+                <article>
+                    <aside>
+                        <strong>Theatre</strong> 
+                        <a href="#">Go &#187;</a>
+                    </aside>
+                </article>
+            </section>
         </section>
 
         <section class="contact" id="contact">
