HTML: event section -  txt changes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </figcaption>
                     </figure>
                     <aside>
-                        <h4>Vancouver New Year's Eve 2023 - Gatsby's House Party</h4>
+                        <h4>Mingle All The Way: Vancouver Christmas Market with the GCP</h4>
                         <p>Sat, Nov 26, 5:30 pm</p>
                         <address><i class="fa-solid fa-location-dot"></i> Jack Poole Plaza, 1055 Canada Place, Vancouver</address>
                         <small>CAD $12</small>
