--- a/index.html
+++ b/index.html
@@ -173,7 +173,59 @@
         </section>
 
     </main>
-
-    <footer></footer>
+    <!-- footer -->
+    <footer>
+        <section>
+            <article>
+                <aside>
+                    <h6>about</h6>
+                    <ul>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">about</a></li>
+                    </ul>
+                </aside>
+                <aside>
+                    <h6>services</h6>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Customer Service</a></li>
+                        <li><a href="#">Terms and Condition</a></li>
+                    </ul>
+                </aside>
+                <aside>
+                    <h6>Contact</h6>
+                    <ul>
+                        <li><a href="#" class='fa-brands fa-facebook-f'></a></li>
+                        <li><a href="#" class='fa-brands fa-twitter'></a></li>
+                        <li><a href="#" class="fa-brands fa-github"></a></li>
+                        <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                    </ul>
+                    <i class="fa-solid fa-phone">889 W Pender St #200, Vancouver, BC V6C 3B2</i>
+                    <i class="fa-regular fa-envelope">+16048994480</i>
+                    <address>889 W Pender St #200, Vancouver, BC V6C 3B2</address>
+                </aside>
+                <aside>
+                    <h6>Newsletter</h6>
+                    <article>
+                        <input type="email" name="email" placeholder='Email address'>
+                        <input type="subit" name="submit" value='U+2192'>
+                    </article>
+                    <article>
+                        <input type="checkbox" name='subscribe'>
+                        Subscribe to receive communications from Aesop about our products and services. By subscribing, you confirm you have read and accept our privacy policy 
+                    </article>
+                </aside>
+            </article>
+        </section>
+        <section>
+            <article>
+                <p>HangVan</p>
+                <p>
+                    &copy; HangVan Company. All rights reserved.
+                </p>
+            </article>
+        </section>
+    </footer>
 </body>
 </html>
