Main: Place HTML, CSS done

--- a/index.html
+++ b/index.html
@@ -144,24 +144,40 @@
                 <article>
                     <aside>
                         <strong>Restaurant</strong> 
+                        <p>Find Stunning Places!</p>
+                        <small>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, nostrum?
+                        </small>
                         <a href="#">Go &#187;</a>
                     </aside>
                 </article>
                 <article>
                     <aside>
                         <strong>Activities</strong> 
+                        <p>Find Stunning Places!</p>
+                        <small>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, nostrum?
+                        </small>
                         <a href="#">Go &#187;</a>
                     </aside>
                 </article>
                 <article>
                     <aside>
-                        <strong>Exhibition</strong> 
+                        <strong>Exhibition</strong>
+                        <p>Find Stunning Places!</p>
+                        <small>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, nostrum?
+                        </small> 
                         <a href="#">Go &#187;</a>
                     </aside>
                 </article>
                 <article>
                     <aside>
                         <strong>Theatre</strong> 
+                        <p>Find Stunning Places!</p>
+                        <small>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, nostrum?
+                        </small>
                         <a href="#">Go &#187;</a>
                     </aside>
                 </article>
