Main: nav working

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
         <h1><i class="fa-solid fa-ticket"></i>HangVan</h1>
         <article>
             <ul>
-                <li>
+                <li class="dropdown">
                     <a href="./index.html" class="dropbtn">HOME</a>
-                    <aside>
+                    <aside class="dropdown-content">
                         <a href="#about">About</a>
                         <a href="#event">Recent Event</a>
                         <a href="#place">Place To Go</a>
                         <a href="#contact">Contact</a>
                     </aside>
                 </li>
-                <li><a href="./event.html" class="dropbtn">EVENT</a></li>
-                <li><a href="./place.html" class="dropbtn">PLACE</a></li>
+                <li class="dropdown">
+                    <a href="./event.html" class="dropbtn">EVENT</a>
+                </li>
+                <li class="dropdown">
+                    <a href="./place.html" class="dropbtn">PLACE</a>
+                </li>
             </ul>
             <form>
                 <input type="search" placeholder="Search">
