--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
                 <li class="dropdown">
                     <a href="./index.html" class="dropbtn">HOME</a>
                     <aside class="dropdown-content">
-                        <a href="#about">About</a>
-                        <a href="#event">Recent Event</a>
-                        <a href="#place">Place To Go</a>
+                        <a href="./index.html#about">About</a>
+                        <a href="./index.html#event">Recent Event</a>
+                        <a href="./index.html#place">Place To Go</a>
                         <a href="#contact">Contact</a>
                     </aside>
                 </li>
                 <li class="dropdown">
                     <a href="./event.html" class="dropbtn">EVENT</a>
+                    <aside class="dropdown-content">
+                        <a href="./event.html#eFeature">Feature</a>
+                        
+                    </aside>
                 </li>
                 <li class="dropdown">
                     <a href="./place.html" class="dropbtn">PLACE</a>
