Main: NAV is done

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <li class="dropdown">
                     <a href="./index.html" class="dropbtn">HOME</a>
                     <aside class="dropdown-content">
-                        <a href="./index.html#about">About</a>
-                        <a href="./index.html#event">Recent Event</a>
-                        <a href="./index.html#place">Place To Go</a>
+                        <a href="#about">About</a>
+                        <a href="#event">Recent Event</a>
+                        <a href="#place">Place To Go</a>
                         <a href="#contact">Contact</a>
                     </aside>
                 </li>
