h_main: fixing problem with bootstrap

--- a/event.html
+++ b/event.html
@@ -121,14 +121,15 @@
         <section class="eFeature" id="eFeature">
             <article>
                 <h3>Featured Event on DEC</h3>
+            </article>
+            <section>
                 <figure>
                     <img src="./img/eventThum1.jpg" alt="feature">
                     <figcaption>
                         
                     </figcaption>
                 </figure>
-
-            </article>
+            </section>
 
         </section>
         <article>
