y_main: HTML,CSS_Restaurant section done

--- a/place.html
+++ b/place.html
@@ -22,7 +22,96 @@
                 <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </aside>
             <section>
-                
+                <section>
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <a href="#"><i class="fa-regular fa-heart"></i></a>
+                            </figcaption>
+                        </figure>
+                        <aside>
+                            <h5>The Old Spaghetti Factory</h5>
+                            <address>53 Water St, Vancouver, BC V6B 1A1</address>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li>(2,260)</li>
+                            </ul>
+                        </aside>
+                        <aside>
+                            <a href="#">Read more</a>
+                        </aside>
+                    </article>
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <a href="#"><i class="fa-regular fa-heart"></i></a>
+                            </figcaption>
+                        </figure>
+                        <aside>
+                            <h5>Tom Sushi</h5>
+                            <address>1175 Davie St, Vancouver, BC V6E 1N2</address>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li>(972)</li>
+                            </ul>
+                        </aside>
+                        <aside>
+                            <a href="#">Read more</a>
+                        </aside>
+                    </article>
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <a href="#"><i class="fa-regular fa-heart"></i></a>
+                            </figcaption>
+                        </figure>
+                        <aside>
+                            <h5>Las Tortas Mexican Gourmet</h5>
+                            <address>3353 Cambie St, Vancouver, BC V5Z 2W6</address>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li>(1,500)</li>
+                            </ul>
+                        </aside>
+                        <aside>
+                            <a href="#">Read more</a>
+                        </aside>
+                    </article>
+                    <article>
+                        <figure>
+                            <figcaption>
+                                <a href="#"><i class="fa-regular fa-heart"></i></a>
+                            </figcaption>
+                        </figure>
+                        <aside>
+                            <h5>Black+Blue</h5>
+                            <address>1032 Alberni St 3rd floor, Vancouver, BC V6E 1A3</address>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li>(3,050)</li>
+                            </ul>
+                        </aside>
+                        <aside>
+                            <a href="#">Read more</a>
+                        </aside>
+                    </article>
+                </section>
             </section>
         </section>
         <!-- activities section -->
