--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1><i class="fa-solid fa-ticket"></i>HangVan</h1>
         <article>
             <ul>
-                <li class="dropdown">
+                <li class="dropdown_custom">
                     <a href="./index.html" class="dropbtn">HOME</a>
                     <aside class="dropdown-content">
                         <a href="#about">About</a>
@@ -26,14 +26,14 @@
                         <a href="#contact">Contact</a>
                     </aside>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown_custom">
                     <a href="./event.html" class="dropbtn">EVENT</a>
                     <aside class="dropdown-content">
                         <a href="./event.html#eFeature">Feature</a>
                         
                     </aside>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown_custom">
                     <a href="./place.html" class="dropbtn">PLACE</a>
                 </li>
             </ul>
