h_main: fixing bootstrap problem

--- a/event.html
+++ b/event.html
@@ -17,7 +17,7 @@
         <h1><i class="fa-solid fa-ticket"></i>HangVan</h1>
         <article>
             <ul>
-                <li class="dropdown">
+                <li class="dropdown_custom">
                     <a href="./index.html" class="dropbtn">HOME</a>
                     <aside class="dropdown-content">
                         <a href="./index.html#about">About</a>
@@ -26,15 +26,15 @@
                         <a href="./index.html#contact">Contact</a>
                     </aside>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown_custom">
                     <a href="./event.html" class="dropbtn">EVENT</a>
                     <aside class="dropdown-content">
-                        <a href="eFeature">Feature</a>
-                        <a href="top3">Feature</a>
+                        <a href="#top3">Top3</a>
+                        <a href="#eFeature">Feature</a>
                         
                     </aside>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown_custom">
                     <a href="./place.html" class="dropbtn">PLACE</a>
                 </li>
             </ul>
