y_main: HTML,CSS_Exhibition section done

--- a/place.html
+++ b/place.html
@@ -127,6 +127,54 @@
                 <h4>upcoming program</h4>
                 <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </aside>
+            <section>
+                <section>
+                    <figure>
+                        <img src="/img/exhibition_1.jpeg" alt="exhibition_1">
+                        <figcaption>
+                            <h5>GUUD SAN GLANS ROBERT DAVIDSON: A LINE THAT BENDS BUT DOES NOT BREAK</h5>
+                            <p class="fa-sharp fa-solid fa-location-dot"> Vancouver Art Gallery Logo</p>
+                            <span class="fa-solid fa-dollar-sign"> 56.00</span>
+                            <aside>
+                                <a href="#">Get ticket</a>
+                            </aside>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="/img/exhibition_2.jpeg" alt="exhibition_2">
+                        <figcaption>
+                            <h5>National Geographic's Beyond King</h5>
+                            <p class="fa-sharp fa-solid fa-location-dot"> Vancouver Convention Centre</p>
+                            <span class="fa-solid fa-dollar-sign"> 45.00</span>
+                            <aside>
+                                <a href="#">Get ticket</a>
+                            </aside>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="/img/exhibition_3.png" alt="exhibition_3">
+                        <figcaption>
+                            <h5>Dimension - 3D Printing art gallery</h5>
+                            <p class="fa-sharp fa-solid fa-location-dot"> Dimension Art Gallery</p>
+                            <span class="fa-solid fa-dollar-sign"> 32.00</span>
+                            <aside>
+                                <a href="#">Get ticket</a>
+                            </aside>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="/img/exhibition_4.png" alt="exhibition_4">
+                        <figcaption>
+                            <h5>Fall Group Exhibition</h5>
+                            <p class="fa-sharp fa-solid fa-location-dot"> Caroun Art Gallery</p>
+                            <span class="fa-solid fa-dollar-sign"> 23.00</span>
+                            <aside>
+                                <a href="#">Get ticket</a>
+                            </aside>
+                        </figcaption>
+                    </figure>
+                </section>
+            </section>
         </section>
         <!-- theatre section -->
         <section class="theatre" id="theatre">
