h_main: fixing bootstrap problem

--- a/event.html
+++ b/event.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>teamwork_hangVan_event</title>
@@ -76,7 +76,7 @@
                 <article class="carousel-inner">
                   <figure class="carousel-item active" data-bs-interval="10000">
                     <img src="./img/top1.jpeg" class="d-block w-100" alt="top1">
-                    <figcaption>
+                    <figcaption class="carousel-caption d-none d-md-block">
                         <h2>#1 Celebration Of Light</h2>
                         <h4>late July 2023 (unconfirmed)</h4>
                         <p>
@@ -87,7 +87,7 @@
                   </figure>
                   <figure class="carousel-item" data-bs-interval="2000">
                     <img src="./img/top2.png" class="d-block w-100" alt="top2">
-                    <figcaption>
+                    <figcaption class="carousel-caption d-none d-md-block">
                         <h2>#2 Winterlude</h2>
                         <h4>Feb 3 - Feb 20, 2023</h4>
                         <p>
@@ -98,7 +98,7 @@
                   </figure>
                   <figure class="carousel-item">
                     <img src="./img/top3.jpeg" class="d-block w-100" alt="top3">
-                    <figcaption>
+                    <figcaption class="carousel-caption d-none d-md-block">
                         <h2>#3 Montreal Jazz Festival</h2>
                         <h4>June 29 - July 8, 2023</h4>
                         <p>
