--- a/place.html
+++ b/place.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +11,54 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <!-- NAV -->
+    <nav>
+        <h1><i class="fa-solid fa-ticket"></i>HangVan</h1>
+        <article>
+            <ul>
+                <li class="dropdown_custom">
+                    <a href="./index.html" class="dropbtn">HOME</a>
+                    <aside class="dropdown-content">
+                        <a href="#about">About</a>
+                        <a href="#event">Recent Event</a>
+                        <a href="#place">Place To Go</a>
+                        <a href="#contact">Contact</a>
+                    </aside>
+                </li>
+                <li class="dropdown_custom">
+                    <a href="./event.html" class="dropbtn">EVENT</a>
+                    <aside class="dropdown-content">
+                        <a href="./event.html#eFeature">Feature</a>
+                        
+                    </aside>
+                </li>
+                <li class="dropdown_custom">
+                    <a href="./place.html" class="dropbtn">PLACE</a>
+                </li>
+            </ul>
+            <form>
+                <input type="search" placeholder="Search">
+                <input type="submit" value="Search">
+            </form>
+        </article>
+        <details>
+            <summary class="fa-solid fa-bars"></summary>
+            <ul>
+                <li>
+                    <a href="./index.html">HOME</a>
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#event">Recent Event</a></li>
+                        <li><a href="#place">Place To Go</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </li>
+                <li><a href="./event.html">EVENT</a></li>
+                <li><a href="./place.html">PLACE</a></li>
+            </ul>
+        </details>
+    </nav>
+    <!-- NAV END -->
     <header class='y_header'>
     </header>
   <!-- main -->
@@ -238,8 +285,6 @@
     </main>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
->>>>>>> 0e6f9926582265bb55b497ed0e26ebad1feed6d7
 </body>
 </html>
-=======
->>>>>>> e2029f747d799da4eb07db055a1ea5b7899ce26b
+
