--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
         </details>
     </nav>
     <!-- NAV END -->
-    <header></header>
+    <header>
+        <video src="/video/header.mp4" autoplay muted loop></video>
+        <article>
+            <aside>
+                <h2>Are you ready for Christmas?</h2>
+                <strong>Prepare with <span>HangVan</span>!</strong>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit alias nobis totam veniam itaque nisi fugiat repellat dolorum expedita exercitationem.
+                </p>
+                <a href="#">Read more</a>
+            </aside>
+        </article>
+    </header>
 
     <main>
 
