h_main: working on

--- a/event.html
+++ b/event.html
@@ -171,25 +171,25 @@
             <!-- LIST -->
             <section class="eList" id="eList">
                 <section>
-                    <figure>
-                        <img src="./img/eventThum4.jpg" alt="eventThum4">
-                        <figcaption>
+                    <article>
+                        <figure>
+                            <img src="./img/eventThum4.jpg" alt="eventThum4">
+                            <figcaption>
+
+                            </figcaption>
+                        </figure>
+                        <aside>
                             <h5>Charity</h5>
                             <h4>United for Ukraine Gala Dinner</h4>
                             <h6>Sun, Nov 27, 5:30 pm</h6>
                             <address><i class="fa-solid fa-location-dot"></i> The Vancouver Club, 915 West Hastings Street, Vancouver</address>
-                            <small>CAD $200</small>
+                            <p>CAD $200</p>
                             <p>
                                 Part of the <span>BC Benefit Concerts in Support of Ukraine collection</span> /
                                 Black tie fundraising reception with a program to benefit Ukraine and its children.
                             </p>
                             <details>
                                 <summary>Read More</summary>
-                                <p>
-                                    The Vancouver Club, Maple Hope Foundation and volunteer battalion in Vancouver cordially invite you to NOT JUST A DINNER but a black tie fundraising reception with a program.
-
-                                    Join us in one of the most elite local venues, The Vancouver Club, for a classy evening dedicated to raising funds for Ukraine.
-                                </p>
                                 <h6>Event Info</h6>
                                 <ul>
                                     <li>A special a la Ukrainian style dessert included in the ticket</li>
@@ -205,8 +205,9 @@
                                 <a href="#"><i class="fa-solid fa-share-nodes"></i> share</a>
                                 <a href="#">Get Ticket</a>
                             </section>
-                        </figcaption>
-                    </figure>
+                        </aside>
+                    </article>
+                    
                 </section>
 
             </section>
