y_main: HTHML,CSS_mobile_Reference section done

--- a/place.html
+++ b/place.html
@@ -281,6 +281,63 @@
                 <h4>reference</h4>
                 <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </aside>
+            <section class="accordion accordion-flush" id="accordionFlushExample">
+                <article class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Reference #1
+                    </button>
+                  </h2>
+                  <figure id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <img src="/img/reference_1.png" alt="">
+                    <figcaption>
+                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <a class="accordion-body" href="https://www.squarespace.com/templates/hoyd-fluid-demo" target='_blank'>squarespace.com</a>
+                    </figcaption>
+                  </figure>
+                </article>
+                <article class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Reference #2
+                    </button>
+                  </h2>
+                  <figure id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headinTwo" data-bs-parent="#accordionFlushExample">
+                    <img src="/img/reference_2.png" alt="">
+                    <figcaption>
+                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <a class="accordion-body" href="https://www.tripadvisor.ca/" target='_blank'>tripadvisor.ca</a>
+                    </figcaption>
+                  </figure>
+                </article>
+                <article class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Reference #3
+                    </button>
+                  </h2>
+                  <figure id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                    <img src="/img/reference_3.png" alt="">
+                    <figcaption>
+                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <a class="accordion-body" href="https://www.yanolja.com/exhibition/6563?cio=updated" target='_blank'>yanolja.com</a>
+                    </figcaption>
+                  </figure>
+                </article>
+                <article class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        Reference #4
+                    </button>
+                  </h2>
+                  <figure id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headinFour" data-bs-parent="#accordionFlushExample">
+                    <figcaption>
+                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <a class="accordion-body" href="https://www.whistlerblackcomb.com/" target='_blank'>whistlerblackcomb.com</a>
+                    </figcaption>
+                  </figure>
+                </article>
+            </section>
         </section>
     </main>
     <!-- JavaScript Bundle with Popper -->
