y_main: HTML,CSS_mobile: Activities section done

--- a/place.html
+++ b/place.html
@@ -168,6 +168,42 @@
                 <h4>activities</h4>
                 <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </aside>
+            <section>
+                <article>
+                    <figure>
+                        <figcaption>
+                            <small>Fun for the family!</small>
+                            <h5><i class="fa-regular fa-snowflake"></i> Snowtubing</h5>
+                            <p>Cypress Mountain</p>
+                            <a href="#">learn more &rarr;</a>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>
+                            <small>Experience to the next level!</small>
+                            <h5><i class="fa-solid fa-person-skiing"></i> Whistler Heli-Skiing</h5>
+                            <p>Whistler</p>
+                            <a href="#">learn more &rarr;</a>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>
+                            <small>Foster a healthier eco system!</small>
+                            <h5><i class="fa-solid fa-ship"></i> Wild Whales Vancouver</h5>
+                            <p>Granville Island</p>
+                            <a href="#">learn more &rarr;</a>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <figcaption>
+                            <small>Experience the city!</small>
+                            <h5><i class="fa-solid fa-plane-up"></i> Seaplane Tour</h5>
+                            <p>Vancouver Harbour Flight Centre</p>
+                            <a href="#">learn more &rarr;</a>
+                        </figcaption>
+                    </figure>
+                </article>
+            </section>
         </section>
         <!-- exhibition section -->
         <section class="exhibition" id="exhibition">
