y_main: CSS_tablet is progressing

--- a/place.html
+++ b/place.html
@@ -145,7 +145,7 @@
                         </figure>
                         <aside>
                             <h5>Black+Blue</h5>
-                            <address>1032 Alberni St 3rd floor, Vancouver, BC V6E 1A3</address>
+                            <address>1032 Alberni St 3rd floor, Vancouver, BC V6E</address>
                             <ul>
                                 <li></li>
                                 <li></li>
