main: nav and header modified

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                 <li class="dropdown_custom">
                     <a href="./event.html" class="dropbtn">EVENT</a>
                     <aside class="dropdown-content">
+                        <a href="./event.html#top3">Top 3 Festivals</a>
                         <a href="./event.html#eFeature">Feature</a>
-                        
+                        <a href="./event.html#eList">Event List</a>
+                        <a href="./event.html#eReference">References</a>
                     </aside>
                 </li>
                 <li class="dropdown_custom">
@@ -54,7 +56,15 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </li>
-                <li><a href="./event.html">EVENT</a></li>
+                <li>
+                    <a href="./event.html">EVENT</a>
+                    <ul>
+                        <li><a href="./event.html#top3">Top 3 Festivals</a></li>
+                        <li><a href="./event.html#eFeature">Feature</a></li>
+                        <li><a href="./event.html#eList">Event List</a></li>
+                        <li><a href="./event.html#eReference">References</a></li>
+                    </ul>
+                </li>
                 <li><a href="./place.html">PLACE</a></li>
             </ul>
         </details>
